# WebServer

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  benchmark.sh  build.sh  main.cpp  makefile  run.sh  utils.cpp  webserver.cpp  webserver.h
.VSCodeCounter/2025-03-20_00-15-07/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-03-20_00-16-31/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-03-20_20-32-01/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
CGImysql/: sql_connection_pool.cpp  sql_connection_pool.h
WebServer/: webserver.cpp  webserver.h
buffer/SimpleExam/: buffer.cpp
buffer/SimpleExam/tests/: buffer_unittest.cpp
http/: http_conn.cpp  http_conn.h  http_parser.cpp  http_parser.h
http/demo/: http_parser.cpp
include/: acceptor.h  any.h  async_logger.h  buffer.h  config.h  epoller.h  eventloop_thread.h  eventloop_threadpool.h  http_connection.h  http_message.h  http_parser.h  http_server.h  inet_address.h  log_file.h  log_stream.h  logger.h  tcp_connection.h  tcp_server.h  timestamp.h  timing_wheel.h  weak_callback.h
log/: log.cpp
resources/: 405.html
src/: CMakeLists.txt  main.cpp
src/SimpleExam/: buffer.cpp  buffer.h
src/acceptor/: acceptor.cpp  acceptor.h
src/base/: any.h  config.cpp  config.h  count_down_latch.h  inet_address.cpp  inet_address.h  thread.cpp  thread.h  weak_callback.h
src/buffer/: buffer.cpp  buffer.h
src/channel/: channel.cpp  channel.h
src/epoller/: epoller.cpp  epoller.h
src/eventloop/: eventloop.cpp  eventloop.h  eventloop_thread.cpp  eventloop_thread.h  eventloop_threadpool.cpp  eventloop_threadpool.h
src/http/: http_conn.cpp  http_conn.h  http_connection.cpp  http_connection.h  http_message.cpp  http_message.h  http_parser.cpp  http_parser.h  http_server.cpp  http_server.h
src/http/dd/: a.cpp
src/http/deprecated/: http_parser.cpp  http_parser.h
src/http/tests/: a.out  test.cpp  test_message.cpp  test_parse.cpp  ttt.cpp
src/include/: channel.h  count_down_latch.h  epoller.h  eventloop.h  eventloop_thread.h  thread.h  timer.h  timestamp.h
src/lock/: locker.h
src/log/: block_queue.h  log.h
src/logger/: async_logger.cpp  async_logger.h  log_file.cpp  log_file.h  log_stream.cpp  log_stream.h  logger.cpp  logger.h
src/tcp/: tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
src/threadpool/: depre_threadpool.h  threadpool.cpp
src/timer/: timeing_wheel.cpp  timer.cpp  timer.h  timestamp.h  timing_wheel.h
src/util/: filt_util.h  utils.cpp  utils.h
test/: CMakeLists.txt  README  acceptor_test.cpp  any_class_test.cpp  asynclogging_test.cpp  buffer_unittest.cpp  channel_epoller_test.cpp  config_test.cpp  eventloop2_test.cpp  eventloop_test.cpp  eventloop_thread_test.cpp  http_parser_unittest.cpp  http_parser_with_tcp_server_test.cpp  http_server_unittest.cpp  httpserver_demo_test.cpp  inet_address_unittest.cpp  logfile_test.cpp  logger_test.cpp  makefile  tcpconn_send2_test.cpp  tcpconn_send3_test.cpp  tcpconn_send_test.cpp  tcpserver_test.cpp  test_event_loop2.cpp  test_eventloop_thread.cpp  test_logfile.cpp  test_logger.cpp  test_timer_self_cancel.cpp  thread_test.cpp  timer_self_cancel_test.cpp  timer_test.cpp  timewheel_test.cpp
test/event_loop/: MAIN  makefile  test_channel_epoller_loop.cpp  test_loop_timer.cpp  test_run_in_loop_queue_in_loop.cpp
test/server_client/: client.cpp  sever.cpp
threadpool/: threadpool.h
